# Carapace-implementation

./: Cargo.toml  README.md  tgz_script.sh
ifc_examples/: README.md
ifc_examples/avail/avail_code/: Cargo.toml
ifc_examples/avail/avail_code/src/: commands.rs  main.rs
ifc_examples/avail/avail_code/src/datetime/: availability.rs  finder.rs
ifc_examples/avail/avail_code/src/events/: google.rs  microsoft.rs  mod.rs
ifc_examples/avail/chrono-0.4.22/: Cargo.toml
ifc_examples/avail/chrono-0.4.22/src/datetime/: mod.rs
ifc_examples/avail/chrono-0.4.22/src/naive/: date.rs  internals.rs
ifc_examples/avail/chrono-0.4.22/src/offset/: utc.rs
ifc_examples/avail_original/: Cargo.toml  timing.txt
ifc_examples/avail_original/chrono-0.4.22/: Cargo.toml
ifc_examples/avail_original/chrono-0.4.22/src/: date.rs  lib.rs  oldtime.rs  round.rs  traits.rs  weekday.rs
ifc_examples/avail_original/info-flow-library/: README.md  tgz_script.sh
ifc_examples/avail_original/src/: commands.rs
ifc_examples/avail_original/src/events/: google.rs  microsoft.rs  mod.rs
ifc_examples/gradebook/: Cargo.toml  add_all.txt  results-parser.py  runner.sh
ifc_examples/gradebook/src/: grades.rs  main.rs
ifc_examples/mk48.io/: README.md
ifc_examples/paper_gradebook/: Cargo.toml
ifc_examples/paper_gradebook/src/: grades.rs  main.rs
ifc_examples/servo/: README.md  indiv.sh  individual_runner.sh  list.txt
ifc_library/macros/: Cargo-counter.toml
ifc_library/macros/src/: lib.rs
ifc_library/secret_structs/: Cargo-counter.toml
ifc_library/secret_structs/src/: main.rs  secret.rs
(+13 files in other folders)
